--- a/views/home.html
+++ b/views/home.html
@@ -92,7 +92,7 @@
         <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/law.jpeg" alt="Third slide">
         <div class="opacity"></div>
         <div class="carousel-caption d-none d-md-block">
-          <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
+          <p class="text-white">Creando acciones conjuntas para el beneficio mutuo.</p>
         </div>
       </div>
       <div class="carousel-item">
