--- a/views/formulario.html
+++ b/views/formulario.html
@@ -21,7 +21,7 @@
           <div class="col-12 col-md-5 flex-logo">
            <a href="home.html"><i class="fas fa-arrow-circle-left icono"></i></a>
             <img src="../assets/docs/logo.png" class="img-fluid logo mx-auto d-block" alt="Responsive image">
-            <p class="text-center text-blue-miranda text-p  d-none d-sm-block">Enfocados en la prevención y solución de conflictos laborales.</p>
+            <p class=" text-blue-miranda text-p  d-none d-sm-block">Enfocados en la prevención y solución de conflictos laborales.</p>
           </div>
         <!-- formulario de inicio de sesión-->
         <div class="col-12 col-md-7">
@@ -77,18 +77,17 @@
                   <button type="button" class="btn btn-nuevo btn-block">Nuevo campo </button>
                  
                   <div class="custom-file">
-                    
-                    <input type="file" name="fichero" value="" id="fichero">
+                    <input type="file" name="fichero" value="" id="fichero" class="custom-file-input" lang="es">
+                    <label class="custom-file-label btn-pdf" for="fichero">Adjuntar PDF</label>
 
+                    <!--
                     <div class="hidden-xl-down" id="progreso">
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" id="barra-progreso"
                           style="width:0%">
-
                         </div>
                       </div>
-                    </div>
-
+                    </div> -->
                   </div>
                 </div>
                 <div class="container-register">
