--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,21 @@ p.welcome {
   bottom: 1px;
 }
 
+.btn-gmail {
+  width: 100%;
+  background-color:white; 
+  color: rgb(213, 120, 0);
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 16px;
+  vertical-align: middle;
+  padding: 2px;
+  border-color:rgb(213, 120, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
 .rela:hover{
   color: white;
 }
