--- a/views/formulario.html
+++ b/views/formulario.html
@@ -74,6 +74,7 @@
                 </div>
 
                 <div class="btn-container">
+                  <!--Falta implementar funcionalidad-->
                   <button type="button" class="btn btn-nuevo btn-block">Nuevo campo </button>
                  
                   <div class="custom-file">
